--- a/app/views/partials/elements/carrouselItem.html
+++ b/app/views/partials/elements/carrouselItem.html
@@ -1,5 +1,5 @@
 <script type="text/template" id="template-carrouselItem">
-  <a href='/user/<%=User.username%>/<%=entity%>/<%=nameSlugify%>'>
-    <div class="am-MoreImages" style="background-image: url(<%=addFilter(photo, 'w_230,h_230,c_fill')%>);"></div>
+  <a class="am-MoreImages" href='/user/<%=User.username%>/<%=entity%>/<%=nameSlugify%>'>
+    <div class="" style="background-image: url(<%=addFilter(photo, 'w_230,h_230,c_fill')%>);"></div>
   </a>
 </script>
