add links in home

--- a/app/views/pages/index.html
+++ b/app/views/pages/index.html
@@ -78,7 +78,7 @@
 				<div class="inner">
 					<p class="title">PROMOCIONA TU ARTE</p>
 					<p class="subtitle">Unete a más de 1,500 creadores en la primera red social de artistas de Latinoamérica</p>
-					<a href="#">UNIRME</a>
+					<a href="/auth/signup">UNIRME</a>
 				</div>
 			</div>
 		</div>
@@ -150,7 +150,7 @@
 
 	<div class="grid-container u-margin-top-10">
 		<div class="grid-100">
-			<a href="#" class="home-more-link">VER TODAS LAS OBRAS ></a>
+			<a href="/works/category/all/page-1/" class="home-more-link">VER TODAS LAS OBRAS ></a>
 		</div>
 	</div>
 
@@ -186,7 +186,7 @@
 
 	<div class="grid-container u-margin-top-10">
 		<div class="grid-100">
-			<a href="#" class="home-more-link">CONOCE A LOS ARTISTAS ></a>
+			<a href="/users/specialty/all/page-1" class="home-more-link">CONOCE A LOS ARTISTAS ></a>
 		</div>
 	</div>
 
@@ -223,7 +223,7 @@
 
 	<div class="grid-container u-margin-top-20">
 		<div class="grid-100">
-			<a href="#" class="am-More-button">Quiero ver más cosas geniales</a>
+			<a href="/works/category/all/page-1/" class="am-More-button">Quiero ver más cosas geniales</a>
 		</div>
 	</div>
 
@@ -236,7 +236,7 @@
 			<div class="grid-100">
 				<div class="inner">
 					<p class="title">Regístrate y descubre cada día arte curado especialmente para tí</p>
-					<a href="#">REGISTRARME</a>
+					<a href="/auth/signup">REGISTRARME</a>
 					<p class="subtitle">Aprende más sobre qué es artemanfiesto.com</p>
 				</div>
 			</div>
