--- a/app/views/user/index.html
+++ b/app/views/user/index.html
@@ -93,7 +93,7 @@
 		<div class="grid-40 u-margin-top-20">
 
 			<!-- <p class="am-stats-text" style="font-size: 21px; color: #333;">Estadisticas</p> -->
-			<p class="am-stats-text">Estadisticas</p>
+			<p class="am-stats-text">ESTADÍSTICAS</p>
 			<div class="u-separator"></div>
 			<div class="u-center">
 				<!-- <table class="am-Single-stats u-margin-top-10" style="font-size: 13.2px;"> -->
