new db structure

--- a/app/views/user/index.html
+++ b/app/views/user/index.html
@@ -39,7 +39,7 @@
 							{% if profile.following %}
 							<button class="am-Follow-button following">Siguiendo</button>
 							{% else %}
-							<button class="am-Follow-button">+ Seguir</button>
+							<button class="am-Follow-button">+Seguir</button>
 							{% endif %}
 						{% endif %}
 					</div>
@@ -101,12 +101,12 @@
 				  <tr>
 				    <td><i class="bi_interface-view"></i></td>
 				    <td><p>VISTAS</p></td>
-				    <td><span>2342</span></td>
+				    <td><span>{{profile.views}}</span></td>
 				  </tr>
 				  <tr>
 				    <td><i class="bi_ecommerce-diamon"></i></td>
 				    <td><p>VALORACIONES</p></td>
-				    <td><span class="likes">242</span></td>
+				    <td><span class="likes">{{numbers[4]}}</span></td>
 				  </tr>
 				</table>
 			</div>
@@ -289,102 +289,6 @@
 		$.cloudinary.config({{cloudinary.config()|json|safe}});
 		var currentPath = {{currentPath|json|safe}};
 		var profile = {{profile|json|safe}};
-		// $(document).ready(function() {
-		// 	if(owner) {
-		// 		var uploaderImage = new APP.UploaderImage($('.uploader-cover'), function(idImage){
-		// 	      var filters =  {format:'jpg', width: 1600, crop: "limit", quality: 80};
-		// 				var img = $.cloudinary.image(idImage, filters);
-		// 				img.addClass('am-Profile-banner-img').appendTo(this.$view.find('.preview'));
-		// 				uploaderImage.photo = img.attr('src');
-		// 				$('.save-icon , .cancel-icon').show();
-		// 		});
-		// 	}
-		// 	$('.save-icon').click(function(){
-		// 		$.ajax({
-		// 			method: 'POST',
-		// 			url: DataApp.currentUser.url +'/account/'+ 'update_cover',
-		// 			data: {cover: uploaderImage.photo}
-		// 		}).then(function(response) {
-		// 				user = response.data.user;
-		// 				$('.save-icon , .cancel-icon').hide();
-		// 				$('.upload').show();
-		// 				$('.cloudinary-fileupload').show();
-		// 		});
-		// 	});
-		// 	$('.cancel-icon').click(function(){
-		// 		$('.preview > img').attr('src', user.cover);
-		// 		$('.save-icon , .cancel-icon').hide();
-		// 		$('.upload').show();
-		// 		$('.cloudinary-fileupload').show();
-		// 	});
-		// 	var profile = {{profile|json|safe}};
-		// 	var following = profile.following;
-		// 	$('.am-Follow-button').click(function(event){
-		// 		Utils.checkAuthentication();
-		// 		if(following) {
-		// 			var url = DataApp.currentUser.url + '/unfollow/';
-		// 			$.post(url,{idUser:profile.id}, function (response) {
-		// 				if(response.status === 200) {
-		// 					following = false;
-		// 					$('.am-Follow-button').removeClass('following').text('+Seguir');
-		// 				}
-		// 			});
-		// 		}else {
-		// 			var url = DataApp.currentUser.url + '/follow/';
-		// 			$.post(url,{idUser:profile.id}, function (response) {
-		// 				if(response.status === 200) {
-		// 					following = true;
-		// 					$('.am-Follow-button').addClass('following').text('Siguiendo');
-		// 				}
-		// 			});
-		// 		}
-		// 	});
-		// 	var currentPath = {{currentPath|json|safe}}, template;
-		// 	$('.' + currentPath).addClass('selected');
-		// 	var lastPath = currentPath;
-		// 	$('.store').click(function() {openSection('store');});
-		// 	$('.portfolio').click(function() {openSection('portfolio');});
-		// 	$('.collections').click(function() {openSection('collections');});
-		// 	$('.followings').click(function() {openSection('followings');});
-		// 	$('.followers').click(function() {openSection('followers');});
-		// 	var paths = [currentPath];
-		// 	var openSection = function(path) {
-		// 		$('.' + lastPath).removeClass('selected');
-		// 		$('.' + path).addClass('selected');
-		// 		lastViewer.suspend();
-		// 		var url = '/user/' + profile.username + '/' + (path === 'portfolio' ? '' : path)
-		// 		Utils.changeUrl('tags', url);
-		// 		DataApp.currentUrl = url;
-		// 		$('.' + lastPath + '-wrapper').hide();
-		// 		$('.' + path + '-wrapper').show();
-		// 		lastPath = path;
-		// 		if(paths.indexOf(path) === -1) {
-		// 			template = getTemplate(path);
-		// 			paths.push(path);
-		// 			currentViewer = new APP.Viewer(template, $('.' + path +'-container'), 'infinite', null);
-		// 			currentViewer.navigationManager.navigator.needChangeUrl = true;
-		// 			viewers.push(currentViewer);
-		// 		}else {
-		// 			currentViewer = viewers[paths.indexOf(path)]
-		// 			currentViewer.restart();
-		// 		}
-		// 		lastViewer = currentViewer
-		// 	}
-		// 	var getTemplate = function(path) {
-		// 		var temp = '';
-		// 		if(['followings', 'followers'].indexOf(path) !== -1) temp = 'user';
-		// 		if('portfolio' === path) temp = 'work';
-		// 		if('store' === path) temp = 'product';
-		// 		if('collections' === path) temp = 'collection';
-		// 		return temp;
-		// 	};
-		// 	template = getTemplate(currentPath);
-		// 	var currentViewer = new APP.Viewer(template, $('.'+currentPath +'-container'), 'infinite', null);
-		// 	var lastViewer = currentViewer;
-		// 	var viewers = [currentViewer];
-		// });
-		$(function(){
-			new APP.ProfileScreen();
-		})
+		$(function(){new APP.ProfileScreen();})
 	</script>
 {% endblock %}
