--- a/app/views/user/work/index.html
+++ b/app/views/user/work/index.html
@@ -24,7 +24,7 @@
 								<p class="text">COMPARTIR</p>
 							</a>
 							{% if owner %}
-								<a id="go-share-modal" href="#" class="action">
+								<a id="go-share-modal" href="/user/{{element.User.username}}/work/{{element.nameSlugify}}/edit" class="action">
 									<i class="icon bi_editorial-compose"></i>
 									<p class="text">EDITAR</p>
 								</a>
