--- a/app/views/partials/base.html
+++ b/app/views/partials/base.html
@@ -58,6 +58,25 @@
 	</div>
 </div>
 {% endif %}
+
+	<div class="flash-message error" style="bottom: 50px;">
+		<div class="top-bar"></div>
+		<div class="content">
+			<span class="closed">x</span>
+			<p>Tu obra fue subida con éxito! <br> Ahora puedes ver tu portafolio en línea.</p>
+			<button>CERRAR</button>
+		</div>
+	</div>
+
+	<div class="flash-message succes" style="bottom: 300px;">
+		<div class="top-bar"></div>
+		<div class="content">
+			<span class="closed">x</span>
+			<p>Tu obra fue subida con éxito! <br> Ahora puedes ver tu portafolio en línea.</p>
+			<button>CERRAR</button>
+		</div>
+	</div>
+
 	{% block elements %} {% endblock %}
 
 	<div id="lean_overlay"></div>
