--- a/app/views/user/work/edit.html
+++ b/app/views/user/work/edit.html
@@ -64,6 +64,7 @@
 						<i class="load fa fa-spinner"></i>
 					</button>
 				</div>
+				<button class="button u-margin-top-30 send" data-color="blue">ELIMINAR</button>
 			</div>
 		</form>
 
