--- a/app/views/partials/base.html
+++ b/app/views/partials/base.html
@@ -59,7 +59,7 @@
 </div>
 {% endif %}
 
-	<div class="flash-message error" style="bottom: 50px;">
+	<div class="flash-message error">
 		<div class="top-bar"></div>
 		<div class="content">
 			<span class="closed">x</span>
@@ -68,7 +68,7 @@
 		</div>
 	</div>
 
-	<div class="flash-message succes" style="bottom: 300px;">
+	<div class="flash-message succes">
 		<div class="top-bar"></div>
 		<div class="content">
 			<span class="closed">x</span>
