add delete in edit collection

--- a/app/views/user/work/edit.html
+++ b/app/views/user/work/edit.html
@@ -58,13 +58,37 @@
 						</div>
 					</label>
 				</div>
-				<button class="button u-margin-top-30 send" data-color="blue">GUARDAR</button>
+				<!-- <button class="button u-margin-top-30 send" data-color="blue">GUARDAR</button>
 				<div class="hide send-loading">
 					<button class="button u-margin-top-30" data-color="blue">
 						<i class="load fa fa-spinner"></i>
 					</button>
+				</div> -->
+
+				<div class="u-padding-top-20">
+					<div class="grid-50">
+						<a href="#">
+							<button class="button send" style="margin-top: 5px;" data-color="blue">GUARDAR</button>
+							<div class="hide send-loading">
+								<button class="button" style="margin-top: 5px;" data-color="blue">
+									<i class="load fa fa-spinner"></i>
+								</button>
+							</div>
+						</a>
+					</div>
+					<div class="grid-50">
+		        <button class="button inline upload trash" style="border: none; box-shadow: none;">
+		          <i class="bi_editorial-trash-l"></i>&nbsp;&nbsp;&nbsp;ELIMINAR
+		        </button>
+						<div class="edit-options">
+							ELIMINAR? &nbsp;
+							<i class="bi_interface-box-tick hide save-icon" style="display: inline;"></i>
+							<i class="bi_interface-box-cross hide cancel-icon" style="display: inline;"></i>
+						</div>
+					</div>
+
 				</div>
-				<button class="button u-margin-top-30 send" data-color="blue">ELIMINAR</button>
+
 			</div>
 		</form>
 
