--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -249,57 +249,6 @@ body
 .fadeIn
 	animation 5s fadeIn
 
-
-// .flash-message2
-// 	// position absolute
-// 	position fixed
-// 	bottom 20px
-// 	// left 0
-// 	width 250px
-// 	// border solid 1px #999
-// 	box-shadow 0 2px 4px 0 rgba(black, .5)
-// 	border-radius 0 4px 4px 0
-// 	overflow hidden
-// 	z-index 1
-// 	background white
-// 	transform translatex(-100%)
-// 	&.error
-// 		.top-bar
-// 			background linear-gradient(left, #9f041b, #f5515f)
-// 	&.succes
-// 		.top-bar
-// 			background linear-gradient(left, #3023ae, #c86dd7)
-// 	.top-bar
-// 		height 8px
-// 	.content
-// 		padding 20px 10px 10px 10px
-// 		overflow hidden
-// 		position relative
-// 		.closed
-// 			position: absolute;
-// 			top: 10px;
-// 			right: 10px;
-// 			font-family: 'Montserrat',sans-serif;
-// 			color #9b9b9b
-// 			cursor pointer
-// 		p
-// 			font-family: 'Montserrat',sans-serif;
-// 			font-size 12px
-// 			color charcoal-grey
-// 			line-height 1.5
-// 		button
-// 			font-family: 'Montserrat',sans-serif;
-// 			font-size 9px
-// 			color charcoal-grey
-// 			letter-spacing 1.5px
-// 			background white
-// 			padding 6px 7px
-// 			border solid 1px #c2c2c2
-// 			float right
-// 			margin-top 10px
-// 			cursor pointer
-
-
 .fadeIn2
 	// animation 5s fadeIn2
 	transform translatex(0)
@@ -813,6 +762,8 @@ body
 	font-family 'Montserrat', sans-serif
 	span
 		font-size 11px
+	i
+		cursor pointer
 
 .edit
 	font-size 1.15em
@@ -2065,7 +2016,20 @@ body
 					color white
 			i
 				font-size 2em
+		&.trash
+			justify-content center
 
+	.edit-options
+		font-family: 'Montserrat',sans-serif;
+		font-weight: bold;
+		letter-spacing: 1.5px;
+		color: #3a3d3f;
+		margin-top: 15px;
+		font-size: 11px;
+		text-align: center;
+		i
+			font-size: 1.5em;
+			cursor: pointer;
 	.work-collection-card
 		max-width: 220px;
 		margin-left: auto;
