--- a/app/views/partials/base.html
+++ b/app/views/partials/base.html
@@ -111,9 +111,9 @@
 	var owner = {{owner|json|safe}};
 	DataApp.currentUser = {{user|json|safe}} || null;
 	if(DataApp.currentUser !== null) {
-		if(DataApp.currentUser.email === 'hansevangelista@gmail.com'){
+		if(DataApp.currentUser.email === 'juliocanares@gmail.com'){
 			$('.error').find('.content-text').empty();
-			$('.error').find('.content-text').text('ERROR! SE A DETECTADO UN CABRASO');
+			$('.error').find('.content-text').text('BAÑATE GORDITOO!!!');
 			$('.error').addClass('fadeIn');
 		}
 		DataApp.currentUser.url = '/user/' + DataApp.currentUser.username;
