up confirm delete in work

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -745,7 +745,8 @@ body
 
 .delete
 	position absolute
-	bottom 10px
+	// bottom 10px
+	bottom 15px
 	right 5px
 	color white
 	// background rgba(black, .5)
@@ -753,7 +754,8 @@ body
 
 .confirm
 	position absolute
-	bottom 5px
+	// bottom 5px
+	bottom 10px
 	right 5px
 	color white
 	background rgba(black, .5)
