remove edit in work

--- a/app/views/partials/elements/work.html
+++ b/app/views/partials/elements/work.html
@@ -28,7 +28,7 @@
       <% } %>
 
       <% if (owner) { %>
-        <div class="edit"><i class="bi_editorial-compose"></i></div>
+        {# <div class="edit"><i class="bi_editorial-compose"></i></div> #}
 
         {# <div class="cover-work work-options">
           <div class="inner">
