add delete and scape modal

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -60,6 +60,15 @@ white = #fff
 	display: none;
 }
 
+.closed-modal
+	position: absolute;
+	right: -15px;
+	top: -20px;
+	// color: #333;
+	color: white;
+	cursor pointer
+
+
 /*------------------------------------*
 	$ SLIDER
 *------------------------------------*/
