--- a/app/views/user/collection/index.html
+++ b/app/views/user/collection/index.html
@@ -42,6 +42,8 @@
 	</div>
 
 	<div id="edit-modal" style="display: none;">
+		<i class="closed-modal fa fa-times"></i>
+
 		<div class="am-upload-work-box grid-container">
 			<p class="main-title">EDITAR COLECCION</p>
 			<form class="add-work collection-form">
