--- a/app/views/user/work/index.html
+++ b/app/views/user/work/index.html
@@ -271,6 +271,8 @@
 {% include '../../partials/report.html' %}
 
 	<div id="collection-modal" style="display:none;">
+		<i class="closed-modal fa fa-times"></i>
+
 		<div class="actions-box add-collection">
 			<p class="title">Añadir a las colecciones</p>
 			<div class="u-separator u-margin-top-7"></div>
@@ -294,6 +296,8 @@
 	</div>
 
 	<div id="share-modal" style="display:none;">
+		<i class="closed-modal fa fa-times"></i>
+
 		<div class="actions-box social-share">
 			<p class="title">Compartir obras</p>
 			<div class="u-separator u-margin-top-7"></div>
