--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -1899,7 +1899,8 @@ body
 	$ UPLOAD WORK
 *------------------------------------*/
 .am-upload-work
-	background rgba(black, .6)
+	// background rgba(black, .6)
+	background #eee
 	padding 100px 20px
 	.preload
 		text-align center
