--- a/app/views/user/work/add.html
+++ b/app/views/user/work/add.html
@@ -102,10 +102,18 @@
 	          <button class="button inline upload u-margin-top-30 upload_button"><i class="bi_interface-cloud-upload"></i>&nbsp;&nbsp;&nbsp;SUBIR OTRA OBRA</button>
 	  			</a>
 	  		</div>
-	  		<div>
-	  			<button class="button inline upload u-margin-top-30 upload_button work-delete" data-color="red">
+	  		<div class="grid-50">
+	  			<!-- <button class="button inline upload u-margin-top-30 upload_button work-delete" data-color="red">
 	  				<i class="bi_editorial-trash-l"></i>&nbsp;&nbsp;&nbsp;ELIMINAR OBRA
-	  			</button>
+	  			</button> -->
+	        <button class="button inline upload trash" style="border: none; box-shadow: none;">
+	          <i class="bi_editorial-trash-l"></i>&nbsp;&nbsp;&nbsp;ELIMINAR
+	        </button>
+					<div class="edit-options">
+						ELIMINAR? &nbsp;
+						<i class="bi_interface-box-tick hide save-icon" style="display: inline;"></i>
+						<i class="bi_interface-box-cross hide cancel-icon" style="display: inline;"></i>
+					</div>
 	  		</div>
 	  	</div>
 		</div>
