--- a/app/views/user/work/index.html
+++ b/app/views/user/work/index.html
@@ -1,7 +1,8 @@
 {% extends '../../partials/base.html' %}
 
 {% block styles %}
-	<link rel="stylesheet" type="text/css" href="/css/slick.css"/>
+	<link rel="stylesheet" href="/css/photoswipe.css">
+	<link rel="stylesheet" href="/css/default-skin/default-skin.css">
 {% endblock %}
 
 {% block elements %}
@@ -11,7 +12,7 @@
 			<div class="single-info">
 				<div class="single-image">
 					<div class="single-image-inner">
-						<img src="{{element.photo|addFilter('w_700,h_800,q_80,c_limit')}}" class="work-photo">
+						<img src="{{element.photo|addFilter('w_700,h_800,q_80,c_limit')}}" class="work-photo" id="btn">
 						<div class="actions u-padding-top-10">
 							<a class="action {% if element.liked %} active {% endif %}">
 								<div class="like-btn">
@@ -310,11 +311,69 @@
 		</div>
 	</div>
 	<div id="fb-root"></div>
+
+	<div class="pswp" tabindex="-1" role="dialog" aria-hidden="true">
+
+	    <div class="pswp__bg"></div>
+
+	    <div class="pswp__scroll-wrap">
+
+	        <div class="pswp__container">
+	            <div class="pswp__item"></div>
+	            <div class="pswp__item"></div>
+	            <div class="pswp__item"></div>
+	        </div>
+
+	        <div class="pswp__ui pswp__ui--hidden">
+
+	            <div class="pswp__top-bar">
+
+
+	                <div class="pswp__counter"></div>
+
+	                <button class="pswp__button pswp__button--close" title="Close (Esc)"></button>
+
+	                <button class="pswp__button pswp__button--share" title="Share"></button>
+
+	                <button class="pswp__button pswp__button--fs" title="Toggle fullscreen"></button>
+
+	                <button class="pswp__button pswp__button--zoom" title="Zoom in/out"></button>
+
+	                <div class="pswp__preloader">
+	                    <div class="pswp__preloader__icn">
+	                      <div class="pswp__preloader__cut">
+	                        <div class="pswp__preloader__donut"></div>
+	                      </div>
+	                    </div>
+	                </div>
+	            </div>
+
+	            <div class="pswp__share-modal pswp__share-modal--hidden pswp__single-tap">
+	                <div class="pswp__share-tooltip"></div>
+	            </div>
+
+	            <button class="pswp__button pswp__button--arrow--left" title="Previous (arrow left)">
+	            </button>
+
+	            <button class="pswp__button pswp__button--arrow--right" title="Next (arrow right)">
+	            </button>
+
+	            <div class="pswp__caption">
+	                <div class="pswp__caption__center"></div>
+	            </div>
+
+	          </div>
+
+	        </div>
+
+	</div>
+
 {% endblock %}
 
 {% block scripts %}
 
-	<script type="text/javascript" src="/slick.js"></script>
+	<script src="/photoswipe.js"></script>
+	<script src="/photoswipe-ui-default.js"></script>
 
 	<script>
 		(function (d, s, id) {
@@ -338,44 +397,6 @@
 		$(function() {
 			$("#go-collection-modal").leanModal();
 			$("#go-share-modal").leanModal();
-
-			// setTimeout(function () {
-			// 	$('.your-class').slick({
-			// 		// dots: true,
-			// 		infinite: true,
-			// 		// speed: 300,
-			// 		// slidesToShow: 1,
-			// 		// centerMode: true,
-			// 		variableWidth: true
-			// 		// slidesToShow: 2,
-			// 		// slidesToScroll: 1
-			// 	});
-			// }, 1000)
-
-			// var similar = document.querySelector('.similar')
-			// var next = document.querySelector('.next')
-			// var prev = document.querySelector('.prev')
-
-			// var interval
-
-			// $('.next').mousedown( function () {
-			// 	interval = setInterval( function () {
-			// 		similar.scrollLeft = similar.scrollLeft + 20
-			// 	}, 100)
-			// })
-
-			// $('.prev').mousedown( function () {
-			// 	interval = setInterval( function () {
-			// 		similar.scrollLeft = similar.scrollLeft - 20
-			// 	}, 100)
-
-			// })
-
-			// $(document).mouseup (function () {
-			// 	console.log('mouseup')
-			// 	clearInterval(interval)
-			// })
-
 		});
 
 
@@ -387,30 +408,15 @@
 
 			function setup () {
 				$(nextButton).click(function () {
-					// console.log('mousedown!')
-					// $(carousel).animate({
-					// 	scrollLeft: 1000
-					// })
-					// interval = setInterval( function () {
-						// carousel.scrollLeft = carousel.scrollLeft + 20
-						// console.log('animate')
 						$(carousel).animate({
 							scrollLeft: (carousel.scrollLeft + 230)
 						})
-					// }, 100)
 				})
 				$(prevButton).click(function () {
-					// interval = setInterval( function () {
-					// 	carousel.scrollLeft = carousel.scrollLeft - 20
-					// }, 100)
 					$(carousel).animate({
 						scrollLeft: (carousel.scrollLeft - 230)
 					})
 				})
-
-				// $(document).mouseup (function () {
-				// 	clearInterval(interval)
-				// })
 			}
 
 			setup()
@@ -418,6 +424,32 @@
 
 		var carousel = new Carousel (document.querySelector('.js-more-carousel'))
 		var carousel = new Carousel (document.querySelector('.js-similar-carousel'))
+
+
+		var openPhotoSwipe = function() {
+	    var pswpElement = document.querySelectorAll('.pswp')[0];
+
+	    // build items array
+	    var items = [
+				{
+					src: $('#btn')[0].src,
+					w: $('#btn')[0].width,
+					h: $('#btn')[0].height
+				}
+	    ];
+
+	    // define options (if needed)
+	    var options = {
+
+	    };
+
+	    var gallery = new PhotoSwipe( pswpElement, PhotoSwipeUI_Default, items, options);
+	    gallery.init();
+		};
+
+		// openPhotoSwipe();
+
+		document.getElementById('btn').onclick = openPhotoSwipe;
 
 	</script>
 	<script src='/work-product.js'></script>
