--- a/app/views/user/work/index.html
+++ b/app/views/user/work/index.html
@@ -7,6 +7,7 @@
 
 {% block elements %}
 {% set element = element.toJSON() %}
+
 	<div class="grid-container u-margin-top-20">
 		<div class="grid-100">
 			<div class="single-info">
@@ -426,31 +427,53 @@
 		var carousel = new Carousel (document.querySelector('.js-similar-carousel'))
 
 
-		var openPhotoSwipe = function() {
-	    var pswpElement = document.querySelectorAll('.pswp')[0];
+		var meta
 
-	    // build items array
-	    var items = [
-				{
-					src: $('#btn')[0].src,
-					w: $('#btn')[0].width,
-					h: $('#btn')[0].height
-				}
-	    ];
+		$("<img/>").load(function(){
+			var width = this.width, height = this.height;
+			meta = { width: width, height: height }
+		}).attr("src", element.photo);
 
-	    // define options (if needed)
-	    var options = {
+		setTimeout(function () {
+			// console.log('meta: ', meta)
 
-	    };
+			var openPhotoSwipe = function() {
+		    var pswpElement = document.querySelectorAll('.pswp')[0];
 
-	    var gallery = new PhotoSwipe( pswpElement, PhotoSwipeUI_Default, items, options);
-	    gallery.init();
-		};
+		    // build items array
+		    var items = [
+					{
+						// src: Utils.addImageFilter(element.photo, 'w_1000,h_700')
+						// w: $('#btn')[0].width,
+						// h: $('#btn')[0].height,
+						src: element.photo,
+						w: meta.width,
+						h: meta.height
+					}
+		    ];
+
+		    // define options (if needed)
+		    var options = {
+
+		    	getThumbBoundsFn: function () {
+		    		return {
+		    			x: $('#btn')[0].offsetLeft ,y: $('#btn')[0].offsetTop, w: $('#btn')[0].width}
+		    	}
+
+		    };
+
+		    window.gallery = new PhotoSwipe( pswpElement, PhotoSwipeUI_Default, items, options);
+		    gallery.init();
+			};
+
+			document.getElementById('btn').onclick = openPhotoSwipe;
+
+		}, 3000)
 
 		// openPhotoSwipe();
 
-		document.getElementById('btn').onclick = openPhotoSwipe;
 
 	</script>
+
 	<script src='/work-product.js'></script>
 {% endblock %}
