add cursor zoom

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -2370,6 +2370,8 @@ body
 	display flex
 	flex-direction column
 	align-items center
+	img
+		cursor zoom-in
 
 @media (min-width: 768px)
 	.single-info
