add categoie images

--- a/app/views/pages/index.html
+++ b/app/views/pages/index.html
@@ -97,25 +97,29 @@
 		<div class="grid-100 grid-parent">
 			<div class="categories">
 				<div class="categorie-container">
-					<a href="/works/category/pintura/page-1/" class="categorie" style="background-image: url('img/categories/1 pintura.png');">
+					<!-- <a href="/works/category/pintura/page-1/" class="categorie" style="background-image: url('img/categories/1 pintura.png');"> -->
+					<a href="/works/category/pintura/page-1/" class="categorie" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/v1448431758/categories/pintura.png');">
 						<div class="cover"></div>
 						<p>pintura</p>
 					</a>
 				</div>
 				<div class="categorie-container">
-					<a href="/works/category/arte-urbano/page-1" class="categorie" style="background-image: url('img/categories/2 arte urbano.png');">
+					<!-- <a href="/works/category/arte-urbano/page-1" class="categorie" style="background-image: url('img/categories/2 arte urbano.png');"> -->
+					<a href="/works/category/arte-urbano/page-1" class="categorie" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/v1448431755/categories/arte-urbano.png');">
 						<div class="cover"></div>
 						<p>arte</p>
 					</a>
 				</div>
 				<div class="categorie-container">
-					<a href="/works/category/dibujo/page-1" class="categorie" style="background-image: url('img/categories/3 dibujo.png');">
+					<!-- <a href="/works/category/dibujo/page-1" class="categorie" style="background-image: url('img/categories/3 dibujo.png');"> -->
+					<a href="/works/category/dibujo/page-1" class="categorie" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/v1448431750/categories/dibujo.png');">
 						<div class="cover"></div>
 						<p>dibujo</p>
 					</a>
 				</div>
 				<div class="categorie-container">
-					<a href="/works/category/digital/page-1" class="categorie" style="background-image: url('img/categories/4 digital.png');">
+					<!-- <a href="/works/category/digital/page-1" class="categorie" style="background-image: url('img/categories/4 digital.png');"> -->
+					<a href="/works/category/digital/page-1" class="categorie" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/v1448431749/categories/digital.png');">
 						<div class="cover"></div>
 						<p>digital</p>
 					</a>
