add navigation text design

--- a/app/styles/texts.styl
+++ b/app/styles/texts.styl
@@ -44,11 +44,18 @@
 
 .am-navigation-text
 	font-family 'Montserrat', sans-serif
-	font-size 21px
+	// font-size 21px
+	font-size 20px
 	text-align center
 	color #333
 	line-height 1.5
 	font-weight bold
+	&.link
+		text-decoration underline
+	&.small
+		font-weight 100
+		font-size 18px
+		color #666
 
 .am-collection-text
 	font-family: 'Montserrat',sans-serif;
