--- a/app/views/pages/works.html
+++ b/app/views/pages/works.html
@@ -46,14 +46,24 @@
 				</div>
 			</div>
 			<div class="text" style="text-align: center;">
-				<!-- <p class="am-navigation-text category-text">{{data.filters.currentCategory}}</p> -->
-				<span class="am-navigation-text category-text">{{data.filters.currentCategory}}</span>
-				<!-- <span class="am-navigation-text"> > </span> -->
+
+				<!-- <span class="am-navigation-text link">Lo mas popular</span>
+				<span class="am-navigation-text">> de</span>
+				<span class="am-navigation-text link">Todas las obras</span>
+				<span class="am-navigation-text small">(5,232 obras)</span> -->
+
+				<span class="am-navigation-text link">Lo mas valorado</span>
+				<span class="am-navigation-text">> de</span>
+				<span class="am-navigation-text link">Fotografia</span>
+				<span class="am-navigation-text">: "</span>
+				<span class="am-navigation-text">Inca</span>
+				<span class="am-navigation-text">"</span>
+				<span class="am-navigation-text small">(2,232 obras)</span>
+
+				<!-- <span class="am-navigation-text category-text">{{data.filters.currentCategory}}</span>
 				<span class="am-navigation-text order-text">{{data.filters.currentOrder}}</span>
-				<!-- <p class="am-navigation-text search-text hide">incas</p> -->
 				<span class="am-navigation-text search-text hide"></span>
-				<!-- <p class="am-navigation-text featured-text hide">AM</p> -->
-				<span class="am-navigation-text featured-text hide"></span>
+				<span class="am-navigation-text featured-text hide"></span> -->
 			</div>
 			<div class="filter right" data-state="closed">
 				<div class="am-Select">
