--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -2269,7 +2269,8 @@ body
 	.left-menu
 		max-width 240px
 		position: absolute;
-		z-index: 1;
+		// z-index: 1;
+		z-index: 2;
 		width: 100%;
 		transition: transform ease .5s;
 		display none
@@ -2301,7 +2302,8 @@ body
 	.right-menu
 		max-width 240px
 		position: absolute;
-		z-index: 1;
+		// z-index: 1;
+		z-index: 2;
 		width: 100%;
 		right 0
 		transition: transform ease .5s;
