--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -3204,6 +3204,101 @@ body
 		border none
 
 
+
+/*------------------------------------*
+	$ FEED
+*------------------------------------*/
+.feed
+	background #bac5c7
+	padding 40px 20px
+	&-inner
+		max-width 540px
+		margin auto
+	&-card
+		background white
+		&-header
+			padding 10px 10px 10px 20px
+			display flex
+			justify-content space-between
+			align-items center
+			.user
+				display flex
+				align-items center
+				img
+					width 40px
+					min-width 40px
+					height 40px
+					border-radius 50%
+				p
+					font-family: 'Montserrat',sans-serif;
+					font-size 12px
+					color #333
+			.info
+				display flex
+				align-items center
+				p
+					font-family: 'PT Serif', serif;
+					font-size 14px
+					color #838c8c
+					font-style italic
+				i
+					color white
+					background #4000ff
+					border-radius 50%
+					width 45.7px
+					height 45.7px
+					display flex
+					align-items center
+					justify-content center
+					font-size 1.5em
+
+		&-image
+			margin auto
+			display block
+
+		&-info
+			padding 15px 20px
+			display flex
+			.info
+				flex 1
+				.title
+					font-family: 'Montserrat',sans-serif;
+					font-weight bold
+					font-size 14px
+					color #393d3f
+					letter-spacing 1px
+				.avatar
+					display flex
+					align-items center
+					img
+						width 30px
+						height 30px
+						min-width 30px
+						border-radius 50%
+					.name
+						font-family: 'PT Serif', serif;
+						font-size 16px
+						color #838c8c
+						font-style italic
+
+		&-footer
+			font-size 12px
+			color #333
+			display flex
+			align-items center
+			padding 20px
+			img
+				width 30px
+				min-width 30px
+				height 30px
+				border-radius 50%
+			p
+				font-family: 'Montserrat',sans-serif;
+				font-size 12px
+				color #333
+
+
+
 @keyframes load
 	0%
 		transform rotate(0)
