--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -3216,6 +3216,7 @@ body
 		margin auto
 	&-card
 		background white
+		border-radius 4px
 		&-header
 			padding 10px 10px 10px 20px
 			display flex
@@ -3255,6 +3256,41 @@ body
 		&-image
 			margin auto
 			display block
+		&-images
+			flex-wrap wrap
+			display flex
+			div
+				width 50%
+				height 200px
+				background-size cover
+				background-position center center
+
+		&-userInfo
+			display flex
+			align-items center
+			padding 15px
+			img
+				border-radius 50%
+				width 60px
+				height 60px
+				min-width 60px
+				margin-right 20px
+			.info
+				.name
+					font-family: 'Montserrat',sans-serif;
+					font-weight bold
+					font-size 13.9px
+					color #666
+				.city
+					font-family: 'Montserrat',sans-serif;
+					font-size 13.9px
+					color #666
+				.stats
+					font-family: 'Montserrat',sans-serif;
+					font-size 12px
+					color #666
+					i
+						font-size 1.15em
 
 		&-info
 			padding 15px 20px
@@ -3296,6 +3332,18 @@ body
 				font-family: 'Montserrat',sans-serif;
 				font-size 12px
 				color #333
+
+		&-button
+			display flex
+			justify-content center
+			padding 30px 20px
+
+@media (min-width: 900px)
+	.feed
+		&-card
+			&-images
+				div
+					height 270px
 
 
 
